--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:setup": "node scripts/setup-database.js"
+    "db:setup": "node scripts/setup-database.js",
+    "check-env": "node scripts/check-env.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
